# abot

./: README.md
1.0/: CMakeLists.txt
1.0/libs/cocos-headers/: CMakeLists.txt
1.0/libs/imgui-hook/: CMakeLists.txt  imgui_hook.cpp  imgui_hook_cappuchino.cpp  imgui_hook_dark-light.cpp  imgui_hook_darkv2.cpp  imgui_hook_maroon.cpp
1.0/libs/imgui-hook/imgui/: imgui_draw.cpp
1.0/libs/imgui-hook/kiero/: kiero.cpp
1.0/src/: console.cpp  console.h  data.h  dllmain.cpp  fpsBypass.cpp  fpsBypass.h  hwid.cpp  hwid.h  playLayer.cpp  playLayer.h  spamBot.cpp  uselessShit.cpp  uselessShit.h
2.0/: CMakeLists.txt  build.bat
2.0/libs/imgui-hook/: CMakeLists.txt  imgui-hook.cpp  imgui_theme.hpp
2.0/libs/minhook/: CMakeLists.txt
2.0/src/: dllmain.cpp  framerate.cpp  globals.h  gui.cpp  hooks.cpp  hwid.cpp  hwid.h  pch.h  recorder.cpp  recorder.hpp  replayEngine.cpp
